--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,20 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100dvh;
+  overflow: hidden;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+#root {
+  height: 100dvh;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.leaflet-container {
+  width: 100%;
+  height: 100vh !important;
+  position: absolute;
 }
